--- a/index.html
+++ b/index.html
@@ -306,6 +306,11 @@
   }
 }
 
+/* projects */
+.col-md-4{
+  padding: 1rem;
+}
+
 .image-container {
   position: relative;
   display: inline-block;
@@ -399,7 +404,7 @@
 <section id="about" class="py-5">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-md-6">
+      <div class="col-md-6" style="padding: 1rem;">
         <img src="https://via.placeholder.com/400" alt="About Me Image" class="img-fluid rounded">
       </div>
       <div class="col-md-6">
@@ -532,45 +537,103 @@
       <div class="col-md-4">
         <div class="card" style="border-radius: 0px;">
           <div class="image-container">
-            <img href="/pictures/capstone.jpg" alt="Project 1">
+            <img src="https://github.com/MasoodahGeorge/portfolioNew/blob/main/pictures/javascript.jpg?raw=true" alt="Project 1">
             <div class="overlay">
-              <a href="#" target="_blank" class="btn btn-primary">View Site</a>
-              <a href="#" target="_blank" class="btn btn-secondary">GitHub</a>
+              <a href="https://ecom-eomp.vercel.app/" target="_blank" class="btn btn-primary">View Site</a>
+              <a href="https://github.com/MasoodahGeorge/ecomEOMP.git" target="_blank" class="btn btn-secondary">GitHub</a>
             </div>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Capstone Project</h5>
+            <h5 class="card-title">Javascript E-commerce</h5>
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card">
-          <div class="image-container">
-            <img src="https://via.placeholder.com/300" class="card-img-top" alt="Project 2">
+        <div class="card" style="border-radius: 0px;">
+          <div class="image-container" style="border-radius: 0px;">
+            <img src="https://github.com/MasoodahGeorge/portfolioNew/blob/main/pictures/todo.jpg?raw=true" alt="Project 2">
             <div class="overlay">
-              <a href="#" target="_blank" class="btn btn-primary">View Site</a>
-              <a href="#" target="_blank" class="btn btn-secondary">GitHub</a>
+              <a href="https://to-do-list-task-gamma.vercel.app/" target="_blank" class="btn btn-primary">View Site</a>
+              <a href="https://github.com/MasoodahGeorge/ToDoListTask.git" target="_blank" class="btn btn-secondary">GitHub</a>
             </div>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Project 2</h5>
+            <h5 class="card-title">To-do List</h5>
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card">
-          <div class="image-container">
-            <img src="https://via.placeholder.com/300" class="card-img-top" alt="Project 3">
+        <div class="card" style="border-radius: 0px;">
+          <div class="image-container" style="border-radius: 0px;">
+            <img src="https://github.com/MasoodahGeorge/portfolioNew/blob/main/pictures/bmi.jpg?raw=true" alt="Project 3">
             <div class="overlay">
-              <a href="#" target="_blank" class="btn btn-primary">View Site</a>
-              <a href="#" target="_blank" class="btn btn-secondary">GitHub</a>
+              <a href="https://bmi-calc-kohl.vercel.app/" target="_blank" class="btn btn-primary">View Site</a>
+              <a href="https://github.com/MasoodahGeorge/bmi-calc.git" target="_blank" class="btn btn-secondary">GitHub</a>
             </div>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Project 3</h5>
+            <h5 class="card-title">BMI Calculator</h5>
           </div>
         </div>
       </div>
+      <div class="col-md-4">
+        <div class="card" style="border-radius: 0px;">
+          <div class="image-container" style="border-radius: 0px;">
+            <img src="https://github.com/MasoodahGeorge/portfolioNew/blob/main/pictures/node.png?raw=true" alt="Project 3">
+            <div class="overlay">
+              <a href="https://nodeproject-1a345.web.app/" target="_blank" class="btn btn-primary">View Site</a>
+              <a href="https://github.com/amyj0hn/nodeproject.git" target="_blank" class="btn btn-secondary">GitHub</a>
+            </div>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Node E-commerce</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card" style="border-radius: 0px;">
+          <div class="image-container" style="border-radius: 0px;">
+            <img src="https://github.com/MasoodahGeorge/portfolioNew/blob/main/pictures/temp.jpg?raw=true" alt="Project 3">
+            <div class="overlay">
+              <a href="https://temperature-converter-iota-eight.vercel.app/" target="_blank" class="btn btn-primary">View Site</a>
+              <a href="https://github.com/MasoodahGeorge/temperature-converter.git" target="_blank" class="btn btn-secondary">GitHub</a>
+            </div>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Tempreture Converter</h5>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="col-md-4">
+        <div class="card" style="border-radius: 0px;">
+          <div class="image-container" style="border-radius: 0px;">
+            <img src="https://github.com/MasoodahGeorge/portfolioNew/blob/main/pictures/pexels-goumbik-574070.jpg?raw=true" alt="Project 3">
+            <div class="overlay">
+              <a href="https://hex-to-rgb-omega.vercel.app/" target="_blank" class="btn btn-primary">View HEX - RGB</a>
+              <a href="https://rg-bto-hex-eight.vercel.app/" target="_blank" class="btn btn-primary">View RGB - HEX</a>
+              <a href="https://github.com/MasoodahGeorge/RGBtoHex.git" target="_blank" class="btn btn-secondary">GitHub</a>
+            </div>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Colour Converter</h5>
+          </div>
+        </div>
+      </div> -->
+      <div class="col-md-4">
+        <div class="card" style="border-radius: 0px;">
+          <div class="image-container" style="border-radius: 0px;">
+            <img src="https://github.com/MasoodahGeorge/portfolioNew/blob/main/pictures/capstone.jpg?raw=true" alt="Project 3">
+            <div class="overlay">
+              <a href="https://masoodah-capstone.web.app" target="_blank" class="btn btn-primary">View Site</a>
+              <a href="https://github.com/MasoodahGeorge/capstone" target="_blank" class="btn btn-secondary">GitHub</a>
+            </div>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Capstone E-commerce</h5>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
