--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ footer {
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6" style="padding: 1rem;">
-        <img src="https://via.placeholder.com/400" alt="About Me Image" class="img-fluid rounded">
+        <img src="https://github.com/MasoodahGeorge/portfolioNew/blob/main/pictures/me.jpg?raw=true" alt="About Me Image" class="img-fluid" style="border-radius: 0px; height: 500px;">
       </div>
       <div class="col-md-6">
         <h2>About Me</h2>
