--- a/index.html
+++ b/index.html
@@ -539,10 +539,28 @@ footer {
     <div class="skill-item">
       <i class="fab fa-aws"></i>
       <h3>AWS Certificates</h3>
+      <a href="https://docs.google.com/document/d/1RxBPy071l1eqAnh8-2YJevExstTlwyCyn2fDA6op1gQ/edit?usp=sharing" target="_blank" style="text-decoration: none;">View</a>
+      <div id="pdfModal" style="display:none;">
+        <div id="modalContent" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); display: flex; justify-content: center; align-items: center; z-index: 1000;">
+          <div style="position: relative; background-color: white; width: 80%; height: 80%;">
+            <button onclick="closePdfModal()" style="position: absolute; top: 10px; right: 10px;">Close</button>
+            <iframe id="pdfViewer" style="width: 100%; height: 100%;" src=""></iframe>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="skill-item">
       <i class="fas fa-network-wired"></i>
       <h3>CISCO Badges</h3>
+      <a href="https://docs.google.com/document/d/1RxBPy071l1eqAnh8-2YJevExstTlwyCyn2fDA6op1gQ/edit?usp=sharing" target="_blank" style="text-decoration: none;">View</a>
+      <div id="pdfModal" style="display:none;">
+        <div id="modalContent" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); display: flex; justify-content: center; align-items: center; z-index: 1000;">
+          <div style="position: relative; background-color: white; width: 80%; height: 80%;">
+            <button onclick="closePdfModal()" style="position: absolute; top: 10px; right: 10px;">Close</button>
+            <iframe id="pdfViewer" style="width: 100%; height: 100%;" src=""></iframe>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
