--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ footer {
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6" style="padding: 1rem;">
-        <img src="https://github.com/MasoodahGeorge/portfolio_/blob/main/pictures/me.jpg?raw=true" alt="About Me Image" class="img-fluid" style="border-radius: 0px; height: 500px;">
+        <img src="https://github.com/MasoodahGeorge/portfolio_/blob/main/pictures/me.jpg?raw=true" alt="About Me Image" class="img-fluid" style="border-radius: 0px; height: 500px; width: 100%; object-fit: cover;">
       </div>
       <div class="col-md-6">
         <h2>About Me</h2>
@@ -693,9 +693,9 @@ footer {
       <button type="submit" class="btn btn-primary" style="background-color: #383838; border: #383838;">Send Message</button>
     </form>
     <div class="contact-icons">
-      <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
-      <a href="#" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-      <a href="#" title="GitHub"><i class="fab fa-github"></i></a>
+      <a href="https://wa.me/27621636155" title="WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="mailto:masoodahgeorge05@gmail.com" title="Email" target="_blank"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/masoodah-george-79515b2b6" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
   </div>
 </section>
